--- a/frontprojetapi/src/main/resources/templates/articles.html
+++ b/frontprojetapi/src/main/resources/templates/articles.html
@@ -1,10 +1,58 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Liste d'article</title>
-</head>
-<body>
 
+<head>
+	<meta charset="UTF-8">
+	<title>Liste d'article</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="container-fluid">
+			<a class="navbar-brand" th:href="@{/}">Project DEV API</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" th:href="@{/}">Accueil</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" th:href="@{/articles}">Articles</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Categories</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<h5>Liste d'article : </h5>
+
+	<div class="container">
+		<div style="gap: 2rem;" class="row">
+			<div class="card" style="width: 18rem;" th:each="article : ${articles}">
+				<div class="card-body">
+					<p th:text="${article.id}"></p>
+					<h5 class="card-title" th:text="${#strings.abbreviate(article.title,25)}"></h5>
+					<h6 class="card-subtitle mb-2 text-muted" th:text="${article.date}"></h6>
+					<p class="card-text" th:text="${#strings.abbreviate(article.content,38)}"></p>
+					<a th:href="@{'/articles/' + ${article.id}}" class="card-link">Voir l'article</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
