--- a/frontprojetapi/src/main/resources/templates/article.html
+++ b/frontprojetapi/src/main/resources/templates/article.html
@@ -2,10 +2,13 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<title>Liste d'article</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<meta charset="UTF-8">
+<title>Liste d'article</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+	crossorigin="anonymous">
 
 </head>
 
@@ -13,17 +16,20 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<div class="container-fluid">
 			<a class="navbar-brand" th:href="@{/}">Project DEV API</a>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button"
+				data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false"
+				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a>
 					</li>
-					<li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/articles}">Articles</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Categories</a>
-					</li>
+					<li class="nav-item"><a class="nav-link" aria-current="page"
+						th:href="@{/articles}">Articles</a></li>
+					<li class="nav-item"><a class="nav-link active"
+						th:href="@{/categories}">Categories</a></li>
 				</ul>
 			</div>
 		</div>
@@ -32,23 +38,49 @@
 	<div class="container">
 		<h2 class="card-title mt-4" th:text="${article.title}"></h2>
 		<h6 class="card-subtitle mb-2 text-muted" th:text="${article.date}"></h6>
-		<a class="mb-2" th:each="category : ${article.categories}" th:text="${category.name}"></a>
-		<p class="card-text" th:text="${article.content}"></p>
-		<h6>Commentaires : </h6>
+		<h6 class="card-subtitle mb-2 text-muted" th:text="${article.author}"></h6>
+		<a class="mb-2" th:each="category : ${article.categories}"
+			th:text="${category.name}"></a>
+		<p class="card-text" style="white-space: pre-line"
+			th:text="${article.content}"></p>
+		<h6>Commentaires :</h6>
 		<div class="list-group">
-			<div class="list-group-item list-group-item-action mt-2" th:each="comment : ${article.comments}">
+			<div class="list-group-item list-group-item-action mt-2"
+				th:each="comment : ${article.comments}">
 				<div class="d-flex w-100 justify-content-between">
-					<h5 class="mb-1" th:text="${comment.author}"></h5>
+					<h5 class="mb-1" th:text="${comment.content}"></h5>
 					<small th:text="${comment.date}"></small>
 				</div>
-				<p class="mb-1" th:text="${comment.content}"></p>
+				<p class="mb-1" th:text="${comment.author}"></p>
 			</div>
 		</div>
+		<form method="post" th:action="@{/articles}" th:object="${comment}">
+			<div class="mb-3">
+				<label for="title" class="form-label">Commentaire</label> <input required class="form-control" type="text" th:field="*{title}"
+					id="title">
+			</div>
+			<div class="mb-3">
+				<label for="content" class="form-label">Entrez votre nom</label>
+				<textarea required class="form-control" type="text" id="content" th:field="*{content}" rows="4"></textarea>
+			</div>
+			<div class="mb-3" style="display: none;">
+			<input required class="form-control" th:value="${#dates.format(#dates.createNow(),'yyy-MM-dd')}"
+					th:field="*{date}">
+			</div>
+			<div class="mb-3">
+				<label for="author" class="form-label">Auteur</label> <input required class="form-control" type="text" id="author"
+					th:field="*{author}">
+			</div>
+			<button type="submit" class="btn btn-primary">Créer</button>
+		</form>
+		
+		
 	</div>
 
 
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
 </body>
