--- a/frontprojetapi/src/main/resources/templates/categories.html
+++ b/frontprojetapi/src/main/resources/templates/categories.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Liste d'article</title>
+	<title>Liste de Categories</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
@@ -19,19 +19,28 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link active" th:href="@{/}">Accueil</a>
+					<li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a>
 					</li>
 					<li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/articles}">Articles</a></li>
-					<li class="nav-item"><a class="nav-link" th:href="@{/categories}">Categories</a>
+					<li class="nav-item"><a class="nav-link active" th:href="@{/categories}">Categories</a>
 					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<div class="container">
-	<h5 class="mt-4">Bienvenue</h5>
-	<a th:href="@{/articles}" class="btn btn-primary">Voir les articles</a>
-	<a th:href="@{/categories}" class="btn btn-primary">Voir les categories</a>
+		<h5 class="mt-4">Liste de categories</h5>
+
+
+		<div style="gap: 2rem;" class="row">
+			<div class="card" style="width: 18rem;" th:each="category : ${categories}">
+				<div class="card-body">
+					<p th:text="${category.name}"></p>
+					<a th:href="@{'/categories/' + ${category.category_id}}" class="card-link">Voir
+						les articles</a>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
