--- a/frontprojetapi/src/main/resources/templates/category.html
+++ b/frontprojetapi/src/main/resources/templates/category.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Liste d'article</title>
+<title>Category</title>
 <link
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 	rel="stylesheet"
@@ -26,32 +26,23 @@
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a>
 					</li>
-					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" th:href="@{/articles}">Articles</a></li>
 					<li class="nav-item"><a class="nav-link"
-						th:href="@{/categories}">Categories</a></li>
+						aria-current="page" th:href="@{/articles}">Articles</a></li>
+					<li class="nav-item"><a class="nav-link active" th:href="@{/categories}">Categories</a>
+					</li>
 				</ul>
 			</div>
 		</div>
 	</nav>
 	<div class="container">
-		<h5 class="mt-4">Liste d'article :</h5>
-		<a class="btn btn-primary my-2" th:href="@{/articles/new}">Ajouter
-			un article</a>
-
-
+		<h3 style="text-transform: capitalize;" th:text="${category.name}" class="mt-3"></h3>
 		<div style="gap: 2rem;" class="row">
 			<div class="card" style="width: 18rem;"
-				th:each="article : ${articles}">
+				th:each="article : ${category.articles}">
 				<div class="card-body">
-					<p th:each="category : ${article.categories}"
-						th:text="${category.name}"></p>
 					<h5 class="card-title"
 						th:text="${#strings.abbreviate(article.title,25)}"></h5>
 					<h6 class="card-subtitle mb-2 text-muted" th:text="${article.date}"></h6>
-					<h6 class="card-subtitle mb-2 text-muted"
-						th:text="${article.author}"></h6>
-
 					<p class="card-text"
 						th:text="${#strings.abbreviate(article.content,38)}"></p>
 					<a th:href="@{'/articles/' + ${article.id}}" class="card-link">Voir
