--- a/frontprojetapi/src/main/resources/templates/newArticle.html
+++ b/frontprojetapi/src/main/resources/templates/newArticle.html
@@ -19,9 +19,9 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link active" th:href="@{/}">Accueil</a>
+					<li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a>
 					</li>
-					<li class="nav-item"><a class="nav-link" aria-current="page" th:href="@{/articles}">Articles</a></li>
+					<li class="nav-item"><a class="nav-link active" aria-current="page" th:href="@{/articles}">Articles</a></li>
 					<li class="nav-item"><a class="nav-link" th:href="@{/categories}">Categories</a>
 					</li>
 				</ul>
@@ -29,9 +29,28 @@
 		</div>
 	</nav>
 	<div class="container">
-	<h5 class="mt-4">Bienvenue</h5>
-	<a th:href="@{/articles}" class="btn btn-primary">Voir les articles</a>
-	<a th:href="@{/categories}" class="btn btn-primary">Voir les categories</a>
+		<h5 class="mt-4">Ajouter un article :</h5>
+
+
+		<form method="post" th:action="@{/articles}" th:object="${article}">
+			<div class="mb-3">
+				<label for="title" class="form-label">Titre</label> <input required class="form-control" type="text" th:field="*{title}"
+					id="title">
+			</div>
+			<div class="mb-3">
+				<label for="content" class="form-label">Entrez votre article</label>
+				<textarea required class="form-control" type="text" id="content" th:field="*{content}" rows="4"></textarea>
+			</div>
+			<div class="mb-3">
+				<label for="date" class="form-label">Date</label> <input required class="form-control" type="date" id="date"
+					th:field="*{date}">
+			</div>
+			<div class="mb-3">
+				<label for="author" class="form-label">Auteur</label> <input required class="form-control" type="text" id="author"
+					th:field="*{author}">
+			</div>
+			<button type="submit" class="btn btn-primary">Créer</button>
+		</form>
 	</div>
 
 
