--- a/frontprojetapi/src/main/resources/templates/article.html
+++ b/frontprojetapi/src/main/resources/templates/article.html
@@ -26,9 +26,9 @@
 				<ul class="navbar-nav">
 					<li class="nav-item"><a class="nav-link" th:href="@{/}">Accueil</a>
 					</li>
-					<li class="nav-item"><a class="nav-link" aria-current="page"
+					<li class="nav-item"><a class="nav-link active" aria-current="page"
 						th:href="@{/articles}">Articles</a></li>
-					<li class="nav-item"><a class="nav-link active"
+					<li class="nav-item"><a class="nav-link"
 						th:href="@{/categories}">Categories</a></li>
 				</ul>
 			</div>
@@ -44,6 +44,28 @@
 		<p class="card-text" style="white-space: pre-line"
 			th:text="${article.content}"></p>
 		<h6>Commentaires :</h6>
+		<div class="card p-3 my-3">
+			<h6>Ajouter un commentaire</h6>
+			<form method="post"
+				th:action="@{'/articles/'+ ${article.id} + '/comment'}"
+				th:object="${comment}">
+				<div class="mb-3">
+					<label for="content" class="form-label">Commentaire</label>
+					<textarea required class="form-control" type="text" id="content"
+						th:field="*{content}" rows="2"></textarea>
+				</div>
+				<div class="mb-3">
+					<label for="author" class="form-label">Auteur</label> <input
+						required class="form-control" type="text" id="author"
+						th:field="*{author}">
+				</div>
+				<div class="mb-3">
+					<label for="author" class="form-label">Date</label> <input required
+						class="form-control" type="date" id="date" th:field="*{date}">
+				</div>
+				<button type="submit" class="btn btn-primary">Ajouter</button>
+			</form>
+		</div>
 		<div class="list-group">
 			<div class="list-group-item list-group-item-action mt-2"
 				th:each="comment : ${article.comments}">
@@ -54,27 +76,7 @@
 				<p class="mb-1" th:text="${comment.author}"></p>
 			</div>
 		</div>
-		<form method="post" th:action="@{/articles}" th:object="${comment}">
-			<div class="mb-3">
-				<label for="title" class="form-label">Commentaire</label> <input required class="form-control" type="text" th:field="*{title}"
-					id="title">
-			</div>
-			<div class="mb-3">
-				<label for="content" class="form-label">Entrez votre nom</label>
-				<textarea required class="form-control" type="text" id="content" th:field="*{content}" rows="4"></textarea>
-			</div>
-			<div class="mb-3" style="display: none;">
-			<input required class="form-control" th:value="${#dates.format(#dates.createNow(),'yyy-MM-dd')}"
-					th:field="*{date}">
-			</div>
-			<div class="mb-3">
-				<label for="author" class="form-label">Auteur</label> <input required class="form-control" type="text" id="author"
-					th:field="*{author}">
-			</div>
-			<button type="submit" class="btn btn-primary">Créer</button>
-		</form>
-		
-		
+
 	</div>
 
 
